# Phoniebox

./: .gitignore  0-install-pi.sh  1-install-jukebox.sh  2-config-jukebox.sh  3-optimize-boot.sh  GPIO-Plan.xcf  README.md  config-jukebox.sh  download_raspios_image.sh  final-boot-sequence.md  install-jukebox.sh  install-pi.sh  mpd.mp
downloader/: LICENCE  README.md  pyproject.toml  youtube.csv
downloader/src/: app.py  csv_reader.py  media_converter.py  youtube.py
downloader/tests/: test_csv_reader.py  test_media_converter.py  test_youtube.py
phonie-settings/: gpio.yaml  gpio.yml  jukebox.yaml
pi/: asound.conf  cleanshutd.conf  cmdline.txt  config.txt  mpd.conf
systemd/: jukebox-daemon.service  mpd.service  pulseaudio.service
