[tool.poetry]
name = "downloader"
version = "0.1.0"
description = "Service to download Youtube Videos to Audio Files"
authors = ["S. Räuchle"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
